selfhost/test/typechecker/funcdecl_error_alias_type_mismatch.out
Error at %FILE_NAME%:3:33
Type mismatch
  |  val f: (Int, String) => Float = foo
                                     ^
Expected: (Int, String) => Float
but instead found: (Int, String) => Bool
