selfhost/test/typechecker/funcdecl_error_alias_type_mismatch.abra
func foo(a: Int, b: String): Bool = true

val f: (Int, String) => Float = foo
